--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "zod": "^4.1.3",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "expo-notifications": "~0.31.4",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
