--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "zod": "^4.1.3",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "@expo/ui": "~0.1.1-alpha.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
