--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tailwindcss": "^3.4.17",
     "zod": "^4.1.3",
     "zustand": "^5.0.7",
-    "@expo/ui": "~0.1.1-alpha.10"
+    "@expo/ui": "~0.1.1-alpha.10",
+    "@react-native-community/datetimepicker": "8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
