--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/ui": "~0.1.1-alpha.10",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -22,13 +23,14 @@
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-device": "^8.0.8",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
-    "expo-notifications": "~0.31.4",
+    "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -54,8 +56,7 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "zod": "^4.1.3",
-    "zustand": "^5.0.7",
-    "@expo/ui": "~0.1.1-alpha.10"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
